@@ -1,3 +1,6 @@
+HEAD
+	+ Now deleted users and groups are removed correctly from printers
+	  permissions lists
 2.0.11
 	+ Fixed SQL in activity report section
 2.0.10
